--- a/houdini-rs-experiment/angular.json
+++ b/houdini-rs-experiment/angular.json
@@ -18,9 +18,9 @@
             "outputPath": "dist/houdini-rs-experiment",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/assets"],
+            "assets": ["src/assets"]
           },
           "configurations": {
             "production": {
